--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "env": "^0.0.2",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2"
   }
